# video-eeg-system

./: .gitignore  README.md
dokumenty/: 04_ibi_prezentacja_osiagniec.docx
eeg-pi/: stream_perun32.py
eeg-pi/braintech-compat-shim/: setup.py
eeg-pi/braintech-drivers-double-amplifier/: MANIFEST.in  setup.cfg  setup.py
eeg-pi/braintech-drivers-double-amplifier/tests/: test_double_amplifier.py  test_event_tag_sender.py  test_sample_aligner.py
eeg-pi/braintech-drivers-native-amplifier-lib/: CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.md  setup.cfg  setup.py
eeg-pi/braintech-drivers-native-amplifier-lib/tests/: test_dummy_amplifier.cpp
eeg-pi/braintech-drivers-native-amplifier-lib/tests_py/: test_cython_module.py
eeg-pi/braintech-drivers-perun32/: MANIFEST.in  setup.cfg  setup.py
eeg-pi/braintech-drivers-perun32/eeg_demo/: Makefile  ctrl_seq.h  eeg_demo.cc  eeg_demo.vcxproj  usb_api.h
eeg-pi/braintech-drivers-perun32/eeg_load/: Makefile  eeg_load.cc  eeg_stage_1  eeg_stage_2  eeg_stage_3
eeg-pi/braintech-drivers-perun32/test/: test_perun32.py
eeg-pi/braintech-drivers-perun8/: CMakeLists.txt  MANIFEST.in  setup.cfg  setup.py
eeg-pi/braintech-drivers-perun8/braintech/drivers/perun8/: __init__.py  _perun8.pyx  _version.py  amplifiers.py  install.py  perun_timestamp_correcter.py
eeg-pi/braintech-drivers-perun8/braintech/drivers/perun8/peers/: perun_amplifier_peer.ini  perun_amplifier_peer.py
eeg-pi/braintech-drivers-perun8/braintech/drivers/perun8/resources/: 99-perun.rules
eeg-pi/braintech-drivers-perun8/cmake/: FindFTDI.cmake  FindNumPy.cmake
eeg-pi/braintech-drivers-perun8/src/perun/: PerunAmplifier.cpp
eeg-pi/braintech-drivers-perun8/src/perun/firmware/: dongle.out  head.out
eeg-pi/braintech-drivers-perun8/src/perun/lib/: ADS1299.h  FTDI_win.h  Logger.h  Logger_C.h  Msg.h  Pkt.h  common.h  demo.h  ftdi_cbus_set.h  ftdi_uart.h  ftdi_uart_status.h  uart_cmd_set_value.h  uart_msg.h
eeg-pi/braintech-drivers-perun8/tests/: amplifier_tester.cpp  amplifier_tester.h  test_logger.cpp  test_perun_amplifier.cpp  test_perun_demo.cpp  test_tmsi_amplifier.cpp
eeg-pi/braintech-drivers-perun8/tests_py/: test_cython_module_perun8.py  test_perun_amplifier.py  test_perun_timestamp_correcter.py
eeg-pi/braintech_obci_core/: MANIFEST.in  setup.cfg  setup.py
eeg-pi/braintech_obci_core/docs/: bci_framework_and_guide.rst  bci_framework_commands.rst  conf.py  crash_reporting.rst  index.rst  introduction.rst  logging.rst  make.bat  messages.rst  new_peer_architecture.rst  obci_external_modules.rst  peer_configuration.rst  peer_states.rst  reporting.rst  signal_message.rst  sphinx_autodoc_annotation.py  videoeeg.rst
eeg-pi/braintech_obci_core/test/: README.md  conftest.py
eeg-pi/braintech_obci_experiment/: .gitattributes  MANIFEST.in  setup.cfg  setup.py  versioneer.py
eeg-pi/braintech_obci_experiment/test/: conftest.py
eeg-pi/deploy/: README.md  control_daemon.py  control_profile.eeg.json  perun-control.service  perun-eeg.service  run_eeg.sh  run_impedance.sh
eeg-pi/perun8-rpi/: Makefile  README.md  perun_reader.cpp
eeg-pi/perun8-rpi/src/: Amplifier.cpp  Utils.cpp  Utils.h
eeg-pi/pylsl-master/: setup.py
eeg-pi/svarog-streamer-development/: .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  Svarog_Streamer.nsi  fabfile.py  gen_version.py  mac_build.sh  setup.cfg  setup.py  sign.bat  versioneer.py
eeg-pi/svarog-streamer-development/apps/: mac_requirements.txt  mac_requirements_to_freeze.txt  svarog_streamer.py  svarog_streamer.spec  win_requirements.txt  (+1 more)
pc-tools/: decode_latency_probe.py  h264_inlet.py  h264_to_mp4.py  live_view.py  pack_session.py  pi_control.py  smoke_test_events.py  sync_prototype.py  video_only.py  video_pipeline_probe.py
sync-verification/: check_session.py  eeg_marker_probe.py  marker_drift.py  marker_sync_check.py  plot_marker_overlay.py  plot_soak_results.py  plot_sync_results.py  soak_report.py  vectorize_soak_overview.py  xdf_sync_check.py
sync-verification/pico/: main.py
video-pi/: stream_picam.py
video-pi/deploy/: README.md  control_profile.video.json  picam-control.service  run_picam.sh  stream_picam.service
videoeeg/: .gitignore  CMakeLists.txt  build.bat  notes  resources.qrc  vcpkg.json  videoeeg_schema.drawio
videoeeg/.github/workflows/: cmake-single-platform.yml
videoeeg/qml/: AmplifierSetupWindow.qml  EegGraph.qml  EegWindow.qml  MainWindow.qml  VideoDisplayWindow.qml  main.qml
videoeeg/qml/components/common/: DeviceCard.qml  InfoBanner.qml  NavigationBar.qml  SectionHeader.qml  SuccessBanner.qml
videoeeg/qml/components/eeg/: ControlSection.qml  MarkerButton.qml
videoeeg/qml/components/main/: PanelHeader.qml  PatientListItem.qml  StatusBadge.qml
videoeeg/src/: main.cpp  mainwindow.cpp  mainwindow.h
videoeeg/src/control/: eegcontroldock.cpp  eegcontroldock.h  picontrolclient.cpp  picontrolclient.h  picontrolpoller.cpp  picontrolpoller.h  videocontroldock.cpp  videocontroldock.h
videoeeg/src/core/: appmodel.h  format.h
videoeeg/src/dialogs/: overlays.cpp  overlays.h
videoeeg/src/lsl/: lsleegreceiver.cpp  lsleegreceiver.h  lslvideoreceiver.cpp  lslvideoreceiver.h  sessionrecorder.cpp  sessionrecorder.h
videoeeg/src/managers/: amplifiermanager.cpp  amplifiermanager.h  cameramanager.cpp  cameramanager.h  eegsyncmanager.cpp  eegsyncmanager.h  lslstreamreader.cpp  lslstreamreader.h  markermanager.cpp  markermanager.h  recordingmanager.cpp  recordingmanager.h
videoeeg/src/models/: amplifiermodel.h  eegdatamodel.cpp  eegdatamodel.h  recordingsummary.h  sessionconfig.h  videoframepacket.h
videoeeg/src/screens/: monitorview.cpp  monitorview.h  welcomescreen.cpp  welcomescreen.h
videoeeg/src/theme/: theme.cpp  theme.h
videoeeg/src/ui/: canvases.cpp  canvases.h  uihelpers.cpp  uihelpers.h  videodock.cpp  videodock.h
videoeeg/src/utils/: eegdisplayscaler.cpp  eegdisplayscaler.h
videoeeg/src/viewmodels/: AmplifierSetupBackend.cpp  AmplifierSetupBackend.h  EegBackend.cpp  EegBackend.h  VideoBackend.cpp  VideoBackend.h
videoeeg/src/workers/: recordingworker.cpp  recordingworker.h
(+280 files in other folders)
